Simplify code: remove duplication and improve reuse
- GenerateRulesMojo: share AsciiDocParser across files, extract
  formatErrors() helper, use .toList()
- IskaraSourceTranslator: extract translateNameTypeSection() shared
  by translateFacts() and translateGlobals()
- ExpressionGenerator: remove duplicate capitalize(), delegate to
  JavaIdentifiers.capitalize()
- AssignmentValidator: replace for-each set-building loops with streams

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>